example/secondfile/objects/Admin_Control__c.object
<CustomObject>
    <fields>
        <fullName>AIA_MPS_Signing_Date__c</fullName>
        <label>AIA MPS Contract Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASE_Auto_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASE Auto Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVPN_CAP_P29__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AVPN CAP P29</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Config_Offline_Threshold__c</fullName>
        <label>Config Offline Threshold</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Config_Page_Time_Out_1__c</fullName>
        <label>Config Page Time Out 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Config_Page_Time_Out_2__c</fullName>
        <label>Config Page Time Out 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Monday_Logic__c</fullName>
        <label>Contract Renewal Monday Logic</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Score__c</fullName>
        <label>Course Score</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Site_ID_For_ITPA__c</fullName>
        <label>Customer Site ID For ITPA</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DC_Site_Quote_Expiration_days__c</fullName>
        <label>DC Site Quote Expiration days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_eSign_Countersigner__c</fullName>
        <label>Default eSign Countersigner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounted_Percentage__c</fullName>
        <label>Deal Reg Discounted Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Display_of_Views__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display # of Views</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Docusign_Response_Waiting_Time__c</fullName>
        <label>Docusign Response Waiting Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExecuteAcctTriger__c</fullName>
        <formula>$Label.ExecuteAcctTriger</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExecuteAcctTriger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecuteContactTriger__c</fullName>
        <formula>$Label.ExecuteContactTriger</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExecuteContactTriger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecuteLineItemTrigger__c</fullName>
        <formula>$Label.ExecuteLineItemTrigger</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExecuteLineItemTrigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlowITPAResponse__c</fullName>
        <label>Flow ITPA Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flow_IGLOO_Response__c</fullName>
        <label>Flow IGLOO Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IGLOO_Response_Stubbing_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IGLOO Response Stubbing Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPFlex_ITPA_Response__c</fullName>
        <label>IPFlex ITPA Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IPLEX_ITPA_Response_Stubbing_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IPLEX ITPA Response Stubbing Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IPQ_Web_service_Logging__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To control the web service logs</description>
        <label>IPQ Web service Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITPA_Response_Stubbing_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ITPA Response Stubbing Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IglooSpeedBump__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IglooSpeedBump</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lockin_Days__c</fullName>
        <label>New Start Price Lock-in days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MACD_Price_Lock_in_days__c</fullName>
        <label>MACD Price Lock-in days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MIS_Add_Sites_Suppression__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MIS Add Sites Suppression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MIS_CAP_P29__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MIS CAP P29</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MRA_Countersigner_Attuid__c</fullName>
        <description>MRA Countersigner Attuid new feild for Oct Release</description>
        <label>MRA Countersigner Attuid</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRA_Countersigner__c</fullName>
        <description>This field is to keep the MRA counter signer email id.</description>
        <label>MRA Countersigner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Master_Edit_End_Time__c</fullName>
        <label>Master Edit End Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1:00</fullName>
                </value>
                <value>
                    <fullName>2:00</fullName>
                </value>
                <value>
                    <fullName>3:00</fullName>
                </value>
                <value>
                    <fullName>4:00</fullName>
                </value>
                <value>
                    <fullName>5:00</fullName>
                </value>
                <value>
                    <fullName>6:00</fullName>
                </value>
                <value>
                    <fullName>7:00</fullName>
                </value>
                <value>
                    <fullName>8:00</fullName>
                </value>
                <value>
                    <fullName>9:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
                <value>
                    <fullName>24:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Edit_Start_Time__c</fullName>
        <label>Master Edit Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1:00</fullName>
                </value>
                <value>
                    <fullName>2:00</fullName>
                </value>
                <value>
                    <fullName>3:00</fullName>
                </value>
                <value>
                    <fullName>4:00</fullName>
                </value>
                <value>
                    <fullName>5:00</fullName>
                </value>
                <value>
                    <fullName>6:00</fullName>
                </value>
                <value>
                    <fullName>7:00</fullName>
                </value>
                <value>
                    <fullName>8.00</fullName>
                </value>
                <value>
                    <fullName>9.00</fullName>
                </value>
                <value>
                    <fullName>10.00</fullName>
                </value>
                <value>
                    <fullName>11.00</fullName>
                </value>
                <value>
                    <fullName>12.00</fullName>
                </value>
                <value>
                    <fullName>13.00</fullName>
                </value>
                <value>
                    <fullName>14.00</fullName>
                </value>
                <value>
                    <fullName>15.00</fullName>
                </value>
                <value>
                    <fullName>16.00</fullName>
                </value>
                <value>
                    <fullName>17.00</fullName>
                </value>
                <value>
                    <fullName>18.00</fullName>
                </value>
                <value>
                    <fullName>19.00</fullName>
                </value>
                <value>
                    <fullName>20.00</fullName>
                </value>
                <value>
                    <fullName>21.00</fullName>
                </value>
                <value>
                    <fullName>22.00</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
                <value>
                    <fullName>24:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Edits_End_Date__c</fullName>
        <formula>Master_Rate_Edit_Start_Date__c  +  Master_Rate_Edit_Range__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Edits End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_Occurrence_new__c</fullName>
        <formula>CASE( Master_Rate_Edit_Occurrence__c , &apos;1&apos;, &apos;1st&apos;, &apos;2&apos;, &apos;2nd&apos;, &apos;3&apos;, &apos;3rd&apos;, &apos;4&apos;, &apos;4th&apos;, &apos;5&apos;, &apos;5th&apos;,&apos;&apos;)</formula>
        <label>Master Occurrence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Rate_Edit_Day__c</fullName>
        <label>Master Rate Edit Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Rate_Edit_Occurrence__c</fullName>
        <label>Master Rate Edit Occurrence</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Rate_Edit_Range__c</fullName>
        <label>Master Rate Edit Range</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_Rate_Edit_Start_Date__c</fullName>
        <label>Master Rate Edit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Number_of_Sites__c</fullName>
        <label>Max Number of Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobility_Discunted_Percentage__c</fullName>
        <description>This value is applicable for the Mobility product family.</description>
        <label>Mobility Discounted Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_for_Deal_Reg_Disc__c</fullName>
        <label>Number of Months for Deal Reg Disc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOR_Offline_Threshold__c</fullName>
        <label>OOR Offline Threshold</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptyTriggerStatusImage__c</fullName>
        <formula>if ($Label.ExecuteOpptyTrigger =&apos;true&apos;,IMAGE(&apos;/resource/GreenCheck&apos;,&apos;GreenCheck&apos;),IMAGE( &apos;/resource/RedCheck&apos;,&apos;RedCheck&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OptyTriggerStatusImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptyTriggerStatus__c</fullName>
        <formula>$Label.ExecuteOpptyTrigger</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OptyTriggerStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Email_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Email/Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Schedule_Expiry_Days__c</fullName>
        <label>Pricing Schedule Expiry Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provider_Directory_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Directory Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Admin_Control</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provisioning_Interval__c</fullName>
        <label>Provisioning Interval</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Card_OOR_Threshold__c</fullName>
        <label>Rate Card OOR Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Card_Offline_Threshold__c</fullName>
        <label>Rate Card PL/In-Region Offline Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPTriggerStatus__c</fullName>
        <formula>$Label.ExecuteSPTrigger</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPTriggerStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebserviceLog_Days__c</fullName>
        <label>WebserviceLog Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>remainingApttusConfiglicenses__c</fullName>
        <formula>totalApttusConfiglicenses__c -  used_Apttus_Config_licenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Apttus Config Pricing lic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>remainingApttusContractlicenses__c</fullName>
        <formula>totalApttusContractlicenses__c  - used_Apttus_Contract_licenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Apttus Contract Mngmnt li</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>remainingApttusProposallicenses__c</fullName>
        <formula>totalApttusProposallicenses__c -  used_Apttus_Proposal_licenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Apttus Proposal Mngmnt li</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>remaining_Cust_Communities_licenses__c</fullName>
        <label># of remaining Cust Communities licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>remaining_Partner_licenses__c</fullName>
        <label># of remaining Partner licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totalApttusConfiglicenses__c</fullName>
        <label>Total Apttus Config Pricing license</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totalApttusContractlicenses__c</fullName>
        <label>Total Apttus Contract Mngmnt licens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totalApttusProposallicenses__c</fullName>
        <label>Total Apttus Proposal Mngmnt licens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_Customer_Communities_licenses__c</fullName>
        <label># of total Customer Communities licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_Partner_Communities_licenses__c</fullName>
        <label># of total Partner Communities licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>used_Apttus_Config_licenses__c</fullName>
        <label># of used Apttus Config Pricing licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>used_Apttus_Contract_licenses__c</fullName>
        <label># of used Apttus Contract Mngmnt license</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>used_Apttus_Proposal_licenses__c</fullName>
        <label># of used Apttus Proposal Mngmnt license</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>used_Customer_Communities_licenses__c</fullName>
        <label># of used Customer Communities licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>used_Partner_licenses__c</fullName>
        <label># of used Partner licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Admin Control</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Admin Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admin Control</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AIA_MPS_Signing_Date_should_be_today</fullName>
        <active>true</active>
        <description>AIA MPS Signing Date can only be current date. User should not be allowed to select past and future date.</description>
        <errorConditionFormula>AND( 
ISCHANGED(AIA_MPS_Signing_Date__c), 
AIA_MPS_Signing_Date__c &lt;&gt; Today() 
)</errorConditionFormula>
        <errorMessage>Master Pricing Schedule signing can only be current date - No Past/Future date is allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Admin_Control_Cant_be_more_than_one_Rec</fullName>
        <active>false</active>
        <description>Admin Control Can&apos;t be more than one record.</description>
        <errorConditionFormula>ISNEW()</errorConditionFormula>
        <errorDisplayField>Discounted_Percentage__c</errorDisplayField>
        <errorMessage>Admin Control Can&apos;t be more than one record. Please update the existing record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deal_Discount_Percentage_Validation</fullName>
        <active>false</active>
        <description>Deal discount percentage should be between 0 and 100</description>
        <errorConditionFormula>Discounted_Percentage__c==null ||
Discounted_Percentage__c&lt;=0 ||
Discounted_Percentage__c&gt;=100</errorConditionFormula>
        <errorDisplayField>Discounted_Percentage__c</errorDisplayField>
        <errorMessage>Discount Percentage should be between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Out2_Must_be_Greater_Than_Time_Out1</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Config_Page_Time_Out_2__c  &lt;= Config_Page_Time_Out_1__c , true, false)</errorConditionFormula>
        <errorMessage>Time Out 2 must be Greater than Time Out 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Time_Out_Should_be_below_5_Min</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR(Config_Page_Time_Out_1__c&gt; 300,Config_Page_Time_Out_2__c &gt; 300) , true, false)</errorConditionFormula>
        <errorMessage>Please enter a time below 5 mins.</errorMessage>
    </validationRules>
</CustomObject>